<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:orientation="horizontal"

    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/clear3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rank"
                android:layout_width="30dp"
                android:background="@drawable/layout_ripple"
                android:layout_margin="4dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="00"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/user"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/user_value"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="casual"
                android:text="aaa"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:paddingEnd="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/level"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/level_value"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="casual"
                android:text="aaa"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/score"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/score_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="casual"

                android:text="000"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>