<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Game"
    android:background="@drawable/wallpaper_no_colors"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/game_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="casual"
            android:text="GAME"

            android:textColor="@android:color/holo_orange_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/game_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center"

        >

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="58dp"
            android:background="@drawable/layout_ripple_round"
            android:backgroundTint="@color/clear2"
            android:gravity="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/round"

                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/game_round"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="1"

                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical"

        android:gravity="center"
        android:background="@drawable/layout_ripple_circle">

        

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layoutDirection="rtl"

        android:id="@+id/first"
        >

        <Button
            android:id="@+id/btn_tl"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:layout_centerVertical="true"
            android:layout_gravity="bottom"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="2dp"

            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button1"
            android:backgroundTint="@color/tl_dark"
            android:clickable="true"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_tr"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="2dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button2"
            android:clickable="true"

             />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_below="@id/first"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_bl"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="top"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:adjustViewBounds="true"
                android:background="@drawable/rounded_button3"
                android:clickable="true" />

            <Button
                android:id="@+id/btn_br"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="top"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:adjustViewBounds="true"
                android:background="@drawable/rounded_button4"
                android:clickable="true" />
        </LinearLayout>
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical"
        android:gravity="bottom">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="start"
            android:background="@color/clear_for_main"
            android:id="@+id/game_bar">

            <LinearLayout
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="7dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="@string/score"

                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/game_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="00"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                 />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/level"

                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/game_level"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="aa"

                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>